--- a/apps/web/src/components/Header.module.scss
+++ b/apps/web/src/components/Header.module.scss
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  z-index: 1020;
   &__toggle {
     display: flex;
     border: none;
